add resume and experience section/start adding to support friends section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Experience</a></li>
 								<li><a href="#elements">Elements</a></li>
-								<li><a href="#support">Friends</a></li>
+								<li><a href="#about">Friends</a></li>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
@@ -53,7 +53,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Experience</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><a href='./images/Celina Lind-Resume 2024.pdf' target="_blank"><img src="images/resume-snippet.png" alt=""></img></a></span>
 								<ul class="alt">
 									<li><h3>Headstarter SWE Fellow</h3><h5>July - August 2024</h5>
 										<blockquote>Build 5 AI Projects in 5 weeks, with a final team project of creating a program tackling the backlog of a startup company.</blockquote>
@@ -65,22 +65,35 @@
 									</li>
 									<li>
 										<h3>Junior Software Developer - <i>Novvia</i></h3>
-										<h5>December 2021 - December 2024</h5>
+										<h5>January 2022 - December 2022</h5>
 										<blockquote>Developed a mobile and web application for a startup company, using Flutter, Vue.js, Node.js, and MongoDB.</blockquote>
 									</li>
 									<li>
 										<h3>Software Developer Intern- <i>Novvia</i></h3>
 										<h5>June 2021 - December 2021</h5>
 										<blockquote>Developed a web application for a startup company, using Vue.js, Node.js, and MongoDB.</blockquote>
-								</ul>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
+									</li>
+									</ul>
+								<p>Please check out my <a href='./images/Celina Lind-Resume 2024.pdf' target="_blank">resume</a> for more.</p>
 							</article>
 
 						<!-- Support of Friend's-->
 							<article id="about">
 								<h2 class="major">Support My Friends</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p></p>
+								<ul class="alt">
+									<li>
+										<h3>Catilixia</h3>
+										<h5>Gaming Streamer</h5>
+										<blockquote>A streamer who plays Call of Duty Modern Warfare. She is a talented gamer with a passion for streaming and creating content. She also fosters animals in need in her spare time. Please check out her social media links below.</blockquote>
+										<ul class="icons pt-2">
+											<li><a href="mailto:clind323@gmail.com" class="icon brands fa-google"><span class="label">Twitter</span></a></li>
+											<!-- <li><a href="https://www.linkedin.com/in/" class="icon brands fa-linkedin"><span class="label">Facebook</span></a></li>
+											<li><a href="https://discordapp.com/users/hamlit1163" class="icon brands fa-discord"><span class="label">Instagram</span></a></li>
+											<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li> -->
+										</ul>
+									</li>
+								</ul>
 							</article>
 
 						<!-- Contact -->
@@ -107,9 +120,9 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="mailto:clind323@gmail.com" class="icon brands fa-google"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.linkedin.com/in/" class="icon brands fa-linkedin"><span class="label">Facebook</span></a></li>
+									<li><a href="https://discordapp.com/users/hamlit1163" class="icon brands fa-discord"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
