add intro header image and make link edits to go to blank tab when pressed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<ul>
 					<li><a href="#intro">Intro</a></li>
 					<li><a href="#work">Experience</a></li>
-					<li><a href="#project">Check</a></li>
+					<li><a href="https://celinalind.github.io/motivational-meme/" target="_blank">Check</a></li>
 					<!-- <li><a href="#elements">Elements</a></li> -->
 					<li><a href="#about">Friends</a></li>
 					<li><a href="#contact">Contact</a></li>
@@ -51,7 +51,7 @@
 			<!-- Intro -->
 			<article id="intro">
 				<h2 class="major">Intro</h2>
-				<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+				<span class="image main"><img src="images/intro-header.jpg" alt="Celina and her best friend jumping from a waterfall." /></span>
 				<p>Hi! Nice to meet you, my name is Celina. I'm a passionate computer science student on an exciting
 					journey toward earning my bachelor's degree, with plans to further my education through a master’s
 					in AI and Robotics. When I'm not immersed in coding and tech, you'll find me diving into a good
